blockml/test/errors/03_view/e294/e294.view
view: e294
derived_table: |
  'SELECT * FROM ...'
permanent: true  
pdt_trigger_time: 'unk * * * *'
fields:
- dimension: dim1
  sql: 111



